--- a/Extension/popup.html
+++ b/Extension/popup.html
@@ -22,9 +22,11 @@
           placeholder="Enter Your Answer..."
         ></textarea>
       </div>
+      <div class="main questionBlock" id="questionCount"></div>
 
+      <div id="answer-alert"></div>
       <div class="main flex-container">
-        <button class="main flex-child" id="next">PREVIOUS</button>
+        <button class="main flex-child" id="prev">PREVIOUS</button>
         <button class="main flex-child" id="show-answer">SHOW ANSWER</button>
         <button class="main flex-child" id="speakus">SPEAK US</button>
         <button class="main flex-child" id="speakuk">SPEAK UK</button>
